# diaphragmatic-endometriosis

./: .gitignore  AGENTS.md  CLAUDE.md  Justfile  LICENSE  pyproject.toml
agent/: audit-session-timing.md  audit_2026-04-29.md  audit_gpu_starvation_2026-04-29.md  audit_plan_correctness_2026-04-29.md  containment_audit.md  convert-plan-v2.md  eda_plan.md  eda_synthesis.md  eval_correctness_addendum_2026-04-29.md  handoff-2026-04-26-post-phase1.md  handoff-2026-04-26.md  heterogeneity_and_source_of_truth.md  logging_wandb_plan.md  migration-plan.md  migration_plan_local_copy.md  research_2026_modeling.md  research_medical_imaging_approaches.md  rsna_baseline_directive.md  rsna_baseline_mig_uuids.txt  rsna_baseline_run_log.md  source_of_truth_audit.py  source_of_truth_dicom_probe.py  source_of_truth_investigation.md  totalseg-plan.md  training_pipeline_decisions_phase1.md  vram_estimate.md  wandb_logging_gate_report.md
agent/complete_spec/: 00_PRD.md  01_preprocessing.md  02_lesion_bank.md  (+10 more)
data/: .profile_manifest.jsonl  CLAUDE.md  README.md  cohort.json  manifest.jsonl  splits.json
endo/: AGENTS.md  ema_callback.py  inference_pass.py  lesion_bank.py  lightning_module.py
experiments/: AGENTS.md  baseline_rtmdet_p2.py  e2e_testing.py  quickeval.py  smoke.py
scripts/: AGENTS.md  _common.py  analyze_inplane_spacing.py  audit_mask_canonical.py  binarize_lesion_masks.py  build_lesion_bank.py  build_remask_package.py  build_splits.py  build_unified_manifest.py  build_workplan.py  consolidate.py  consolidate_sidecars.py  convert_one_patient.py  dilate_segmentations.py  generate_patient_names.py  make_abstract_figure.py  migrate_local_copy_to_data.py  migrate_to_home.py  monitor.py  preflight_check.py  preprocess.py  prescan.py  probe_peak_vram.py  profile_aug_stages.py  profile_gpu_starvation.py  profile_gpu_starvation_notes.md  profile_train_aug_call.py  qc.py  realign_masks.py  realign_masks_v2.py  rename_files.py  run_totalseg.py  select_pilot.py  smoke_train.py  verify_e2e_gate.py  wordlists.json
slurm/: convert_phase1.slurm  convert_phase2.slurm
tests/: AGENTS.md
(+128 files in other folders)
