[project]
name = "diaphragmatic-endometriosis"
version = "0.1.0"
description = "2.5D MR detector for diaphragmatic endometriosis lesions (RSNA 2026)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # ── Data / IO ──────────────────────────────────────────────────────
    "nibabel>=5.4.2",
    "numpy>=2.0,<3.0",
    "polars>=1.40.1",
    "pydicom>=3.0.2",
    "pyarrow>=17.0",            # parquet for gt_boxes
    "scipy>=1.13",
    "scikit-image>=0.24",       # connected components / labeling utilities
    "scikit-learn>=1.5",         # AUROC, AP, bootstrap helpers
    # ── Modeling ──────────────────────────────────────────────────────
    "torch>=2.4,<2.6",
    "torchvision>=0.19,<0.21",
    "pytorch-lightning>=2.4,<2.6",
    "timm>=1.0.11",             # ConvNeXt-tiny + ModelEmaV3 + 5-channel conv1 surgery
    # ── Detection-specific ──────────────────────────────────────────
    "ensemble-boxes>=1.0.9",     # 3D WBF
    "picai-eval>=1.4.13",        # FROC + bootstrap
    # ── Logging / viz ─────────────────────────────────────────────────
    "wandb>=0.18",
    "matplotlib>=3.9",
    "pillow>=10.4",
    "seaborn>=0.13.2",
    # ── Misc ──────────────────────────────────────────────────────────
    "tqdm>=4.67.3",
    "pydantic>=2.8",             # ExperimentConfig + sub-configs
    "pyyaml>=6.0",
    "nvidia-ml-py>=13.595.45",
    "psutil>=7.2.2",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ipython>=8.27",
    # NOTE: mmdet/mmcv/mmengine were originally in dev for the parity test
    # (PRD §10.1c, test M8). Pulled out because mmcv 2.2.0 fails to build under
    # Python 3.12 + uv (pkg_resources missing). Vendored sources are pulled
    # directly from github at build time. See IMPLEMENTATION_LOG.md.
]

[tool.uv]
package = false                  # no need to build a wheel for this project

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
